flowcontroller/yamls/networkpolicy-allow-processor-to-processor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-processor-to-processor
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Ingress
  podSelector: 
    matchLabels:
      app: processor
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: processor
      namespaceSelector:
        matchLabels:
          name: ((/spec/namespace))
